--- a/src/pages/mining/mining.html
+++ b/src/pages/mining/mining.html
@@ -1,11 +1,11 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="duckcoin">
     <ion-title>
-      About
+      Minage
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+Minage express !!
 </ion-content>
