--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -7,6 +7,25 @@
 </ion-header>
 
 <ion-content padding>
-Profil utilisateur
+<h2>Profil utilisateur</h2>
+<ion-grid>
+  <ion-row>
+    <ion-col col-lg-1>
+      <img src="assets/imgs/logo.jpg"/>
+    </ion-col>
+    <ion-col>
+      Charles E.
+    </ion-col>
+    <ion-col>
+      Développeur Web et Mobile
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col>
+      Intérêt pour la finance, la blockchain, les technologies mobiles et le O'tacos
+    </ion-col>
+  </ion-row>
+</ion-grid>
+
 <button ion-button (click)="gotoHome()">Aller à l'accueil</button>
 </ion-content>
