--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -2,6 +2,7 @@
   <ion-tab [root]="tab1Root" tabTitle="Accueil" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Minage" tabIcon="information-circle"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Portefeuille" tabIcon="contacts"></ion-tab>
-  <!-- Affichage du nouvel onglet -->
+  <!-- Affichage des nouveaux onglets ici -->
   <ion-tab [root]="tab4Root" tabTitle="Profil" tabIcon="person"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="Paramètres" tabIcon="settings"></ion-tab>
 </ion-tabs>
