--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,26 +7,13 @@
 <ion-content padding>
   <h2 text-center>La monnaie solidaire</h2>
   <p text-justify>
-  DuckCoin, c'est la monnaie qui rend aimable, redonne le sourire et change la face du monde.
-  Elle a été faite pour des gens sympas, juste comme toi.
+    <span bolder>DuckCoin</span>, c'est la monnaie qui rend aimable, redonne le sourire et change la face du monde.
+    Elle a été faite pour des gens sympas, juste comme toi.
   </p>
   <p>
     <img src="assets/imgs/logo.jpg" />
   </p>
-  <p *ngIf="selected">Vous avez selectionné {{selected.title}}</p>
-  <!-- <ion-list>
-    <button ion-item *ngFor="let item of items" (click)="itemSelected(item)">
-      {{ item.title }} vaut {{ item.price }} {{ item.currency }}
-    </button>
-  </ion-list> -->
 
-  <ion-list>
-    <ion-list-header>
-      Dernières transactions
-    </ion-list-header>
-    <button ion-item *ngFor="let transact of transactions">
-      {{transact.recipient | uppercase}} a reçu {{transact.amount | currency:'€'}} de {{transact.sender | uppercase}}
-    </button>
-  </ion-list>
+  <transaction></transaction>
 
 </ion-content>
