--- a/src/pages/wallet/wallet.html
+++ b/src/pages/wallet/wallet.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="duckcoin">
     <ion-title>
       Portefeuille
     </ion-title>
@@ -7,11 +7,5 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
-    </ion-item>
-  </ion-list>
+  <transaction></transaction>
 </ion-content>
