--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,14 +5,20 @@
 </ion-header>
 
 <ion-content padding>
-  <h2 text-center>La monnaie solidaire</h2>
-  <p text-justify>
-    <span bolder>DuckCoin</span>, c'est la monnaie qui rend aimable, redonne le sourire et change la face du monde.
-    Elle a été faite pour des gens sympas, juste comme toi.
-  </p>
-  <p>
-    <img src="assets/imgs/logo.jpg" />
-  </p>
+  <ion-card>
+    <ion-card-header>
+      <h2 text-center>La monnaie solidaire</h2>
+    </ion-card-header>
+    <ion-card-content>
+      <p text-justify>
+        <span bolder>DuckCoin</span>, c'est la monnaie qui rend aimable, redonne le sourire et change la face du monde.
+        Elle a été faite pour des gens sympas, juste comme toi.
+      </p>
+      <p>
+        <img src="assets/imgs/logo.jpg" />
+      </p>
+    </ion-card-content>
+  </ion-card>
 
   <transaction></transaction>
 
