--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -6,3 +6,10 @@
   <ion-tab [root]="tab4Root" tabTitle="Profil" tabIcon="person"></ion-tab>
   <ion-tab [root]="tab5Root" tabTitle="Paramètres" tabIcon="settings"></ion-tab>
 </ion-tabs>
+<ion-fab bottom right>
+  <button ion-fab mini><ion-icon name="add"></ion-icon></button>
+  <ion-fab-list side="top">
+    <button ion-fab><ion-icon name="contacts"></ion-icon></button>
+    <button ion-fab><ion-icon name="send"></ion-icon></button>
+  </ion-fab-list>
+</ion-fab>
